@@ -1,4 +1,4 @@
-#$Id: Makefile.am,v 1.7 2003-10-28 22:11:39 wilsonp Exp $
+#$Id: Makefile.am,v 1.8 2004-08-10 22:08:29 wilsonp Exp $
 
 include $(top_srcdir)/Makefile.h
 
@@ -10,6 +10,7 @@ noinst_HEADERS = Matrix.h  Statistics.h  classes.h  debug.h  functions.h  input_
 
 # Set the installation data directory
 DISTCLEANFILES = dflt_datadir.h
+BUILT_SOURCES = dflt_datadir.h
 dflt_datadir.h: Makefile
 	rm -f $@
 	echo '#define DFLT_DATADIR "$(nonxsdir)"' > $@
