@@ -1,2 +1,0 @@
-#define DFLT_DATADIR "/pong/usr0/w/wilsonp/mylocal/share/alara/data"
-#define DFLT_XSDIR   "/pong/usr0/w/wilsonp/mylocal/lib/alara/solaris"
